--- a/Flask-basic-app/README
+++ b/Flask-basic-app/README
@@ -1,11 +1,11 @@
-# Futuristic Calculator
+# **Futuristic Calculator**
 
 Your go-to calculator for the future! 💥 Do some math with a dash of style. 🚀
 
-## Features
+## **Features**
 - Add, subtract, multiply, and divide—like a pro. ✨
 - Futuristic, colorful vibes with animations. 🔴🟡🟠
 
-## Contributing
+## **Contributing**
 
 Fork it, tweak it, make it yours. Pull requests are always cool! 🎉
