--- a/Flask-basic-app/README
+++ b/Flask-basic-app/README
@@ -2,10 +2,14 @@
 
 Your go-to calculator for the future! 💥 Do some math with a dash of style. 🚀
 
-## **Features**
+## Features
 - Add, subtract, multiply, and divide—like a pro. ✨
 - Futuristic, colorful vibes with animations. 🔴🟡🟠
 
-## **Contributing**
+## License
+
+MIT License—do whatever you want with it, just make it awesome! 😎
+
+## Contributing
 
 Fork it, tweak it, make it yours. Pull requests are always cool! 🎉
